--- a/App/Spo2App.kv
+++ b/App/Spo2App.kv
@@ -1,8 +1,6 @@
 
 <AddButton>:
-    canvas.after:
-        Color:
-            rgba: 1, 1, 1, 1
+    canvas:
         Rectangle:
-            pos: self.pos
-            size: self.size
+            pos: self.x + 50, self.x +50
+            size: 100,100
